--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,4 +1,7 @@
 {% extends 'layout.html'%}
 {% block content%}
-<h2>ADMIN PAGE</h2>
+    <a href="manage_users"><button class="btn btn-primary mt-1">Manage Users</button></a>
+    <a href="manage_job_alerts"><button class="btn btn-primary mt-1">Manage Job Alerts</button></a>
+    <a href="manage_job_offer_posts"><button class="btn btn-primary mt-1">Manage Job Offer Posts</button></a>
+    <a href="manage_reviews"><button class="btn btn-primary mt-1">Manage Reviews</button></a>
 {%endblock content%}
