--- a/templates/register.html
+++ b/templates/register.html
@@ -29,15 +29,27 @@
                   <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password" required>
                 </div>
               </div>
+
+              <!-- Add User Type Selection -->
+              <div class="row mb-3">
+                <div class="col-md-12">
+                  <label for="userType" class="form-label">Are you an Employee or Employer?</label>
+                  <select class="form-control" id="userType" name="userType" required>
+                    <option value="" disabled selected>Select your role</option>
+                    <option value="employee">Employee</option>
+                    <option value="employer">Employer</option>
+                  </select>
+                </div>
+              </div>
+
               <button type="submit" class="btn btn-block text-white" style="background-color: #125394;">Sign Up</button>
             </form>
           </div>
           <div class="card-footer text-center">
-            <small>Already have an account? <a href="{{url_for('login')}}">Login here</a></small>
+            <small>Already have an account? <a href="{{ url_for('login') }}">Login here</a></small>
           </div>
         </div>
       </div>
     </div>
   </div>
-
 {% endblock content %}
